--- a/index.html
+++ b/index.html
@@ -307,16 +307,16 @@
 
         <div class="section-title">
           <h2>Photos</h2>
-          <p></p>
+          <p>Click the chain for more details about the system</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">MYSELF</li>
-              <li data-filter=".filter-card">PROJECTS</li>
-              <li data-filter=".filter-web">PHOTOGRAPHY</li>
+              <li data-filter=".filter-app">WEB APPLICATIONS</li>
+              <li data-filter=".filter-card">BANKING SYSTEM</li>
+              <li data-filter=".filter-web">BOOKING RIDE SYSTEM</li>
             </ul>
           </div>
         </div>
@@ -325,9 +325,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/pic11.jpg" class="img-fluid" alt="">
+              <img src="assets/img/web1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/h2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/web1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -335,9 +335,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/dagat1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/pasakay1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/dagat1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/pasakay.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -345,9 +345,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/pic1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/web2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/pic1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/web2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -365,9 +365,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/sunset2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/pasakay2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/sunset2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/pasakay2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -375,9 +375,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/pic9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/web3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/pic9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/web3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Me 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -405,9 +405,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/sunset1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/pasakay3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/sunset1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/pasakay3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
